Added Swagger, OAuth and SonarQube Changes